--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -216,7 +216,8 @@ Aa-6
                                         </div>
                                     </div>
                                 </td>
-                                <td name="validRateLimitStr">
+                                <td name="validFrom|parseDateTime__validThrough|parseDateTime__validRateLimitStr">
+                                    $validFrom$ ~ $validThrough$<br>
                                     $validRateLimitStr$
                                 </td>
                                 <td name="availableAddOnNames">$availableAddOnNames$</td>
