--- a/views/places/movieTheater/update.ejs
+++ b/views/places/movieTheater/update.ejs
@@ -9,7 +9,7 @@ Aa-18
 <%- contentFor('body') %>
 <div class="form-container">
     <% /* フォーム */ %>
-    <form method="post" class="p-3 bg-light-gray">
+    <form method="post">
         <div class="menu-group">
             <%- include('../../common/errorMessage') %>
             <%- include('../../common/successMessage') %>
