--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,7 +4,7 @@
 
 <body>
     <div class="wrapper ">
-        <div class="sidebar" data-color="orange" data-background-color="white" data-image="/images/sidebar-1.jpg">
+        <div class="sidebar" data-color="purple" data-background-color="black" data-image="/images/sidebar-1.jpg">
             <!--
               Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
       
