--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -1,100 +1,126 @@
-<div class="form-group">
-    <label for="name[ja]" class="">
-        名称<span class="text-danger">＊</span>
-    </label>
-    <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64 value="<%= forms.name.ja %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['name.ja']) { %>
-        <%- errors['name.ja'].msg %>
-        <% } %>
-    </p>
-</div>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">基本設定</h4>
+        </div>
+    </div>
 
-<div class="form-group">
-    <label for="name[en]" class="">
-        英語名称
-    </label>
-    <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64 value="<%= forms.name.en %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['name.en']) { %>
-        <%- errors['name.en'].msg %>
-        <% } %>
-    </p>
-</div>
+    <div class="card-body">
 
-<div class="form-group">
-    <label for="kanaName" class="">
-        カナ名称
-    </label>
-    <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64 value="<%= forms.kanaName %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors.kanaName) { %>
-        <%- errors.kanaName.msg %>
-        <% } %>
-    </p>
-</div>
+        <div class="form-group bmd-form-group">
+            <label for="name[ja]" class="bmd-label-static">
+                名称<span class="text-danger">＊</span>
+            </label>
+            <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+                value="<%= forms.name.ja %>">
+            <p class="message">
+                全角64文字以内でご入力ください。
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors['name.ja']) { %>
+                <%- errors['name.ja'].msg %>
+                <% } %>
+            </p>
+        </div>
 
-<div class="form-group">
-    <label for="telephone" class="">
-        電話番号
-    </label>
-    <input type="tel" class="form-control" name="telephone" id="telephone" placeholder="" maxlength=64
-        value="<%= forms.telephone %>">
-    <p class="message">
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors.telephone) { %>
-        <%- errors.telephone.msg %>
-        <% } %>
-    </p>
-</div>
+        <div class="form-group bmd-form-group">
+            <label for="name[en]" class="bmd-label-static">
+                英語名称
+            </label>
+            <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+                value="<%= forms.name.en %>">
+            <p class="message">
+                全角64文字以内でご入力ください。
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors['name.en']) { %>
+                <%- errors['name.en'].msg %>
+                <% } %>
+            </p>
+        </div>
 
-<div class="form-group">
-    <label for="containsPlaceStr" class="">
+        <div class="form-group bmd-form-group">
+            <label for="kanaName" class="bmd-label-static">
+                カナ名称
+            </label>
+            <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64
+                value="<%= forms.kanaName %>">
+            <p class="message">
+                全角64文字以内でご入力ください。
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors.kanaName) { %>
+                <%- errors.kanaName.msg %>
+                <% } %>
+            </p>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="telephone" class="bmd-label-static">
+                電話番号
+            </label>
+            <input type="tel" class="form-control" name="telephone" id="telephone" placeholder="" maxlength=64
+                value="<%= forms.telephone %>">
+            <p class="message">
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors.telephone) { %>
+                <%- errors.telephone.msg %>
+                <% } %>
+            </p>
+        </div>
+
+    </div>
+</div>
+<!-- end card -->
+
+<div class="form-group bmd-form-group">
+    <label for="containsPlaceStr" class="bmd-label-static">
         スクリーン
     </label>
     <textarea class="d-none" name="containsPlaceStr">
-        <%-(!isNew) ? forms.containsPlaceStr : JSON.stringify([]) %>
-    </textarea>
+<%-(!isNew) ? forms.containsPlaceStr : JSON.stringify([]) %>
+</textarea>
     <div class="json-editor" id="containsPlaceStr"></div>
 </div>
 
-<div class="form-group">
-    <label for="offersStr" class="">
+<div class="form-group bmd-form-group">
+    <label for="offersStr" class="bmd-label-static">
         オファー
     </label>
     <textarea class="d-none" name="offersStr">
-        <%-(!isNew) ? forms.offersStr : JSON.stringify({
-            "typeOf": "Offer",
-            "eligibleQuantity": {
-              "typeOf": "QuantitativeValue",
-              "maxValue": 0,
-              "unitCode": ""
-            },
-            "availabilityStartsGraceTime": {
-              "typeOf": "QuantitativeValue",
-              "value": 0,
-              "unitCode": ""
-            },
-            "availabilityEndsGraceTime": {
-              "typeOf": "QuantitativeValue",
-              "value": 0,
-              "unitCode": ""
-            }
-          }) %>
-    </textarea>
+<%-(!isNew) ? forms.offersStr : JSON.stringify({
+    "typeOf": "Offer",
+    "eligibleQuantity": {
+      "typeOf": "QuantitativeValue",
+      "maxValue": 0,
+      "unitCode": ""
+    },
+    "availabilityStartsGraceTime": {
+      "typeOf": "QuantitativeValue",
+      "value": 0,
+      "unitCode": ""
+    },
+    "availabilityEndsGraceTime": {
+      "typeOf": "QuantitativeValue",
+      "value": 0,
+      "unitCode": ""
+    }
+  }) %>
+</textarea>
     <div class="json-editor" id="offersStr"></div>
 </div>
 
-<%- include('../../common/part/_additionalProperty', {
-    additionalProperty: forms.additionalProperty
-}) %>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">追加特性</h4>
+        </div>
+    </div>
+    <div class="card-body">
+        <%- include('../../common/part/_additionalProperty', {
+            additionalProperty: forms.additionalProperty
+        }) %>
+    </div>
+</div>
+<!-- end card -->
