--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -1,14 +1,14 @@
 <%- contentFor('title') %>
-劇場検索
+スクリーン検索
 <%- contentFor('displayId') %>
-Aa-12
+SR-01
 <%- contentFor('styles') %>
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
 <script src="/js/master/commonMaster.js"></script>
 <script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/places/movieTheaterList.js"></script>
+<script src="/js/master/places/screeningRooms.js"></script>
 
 <%- contentFor('body') %>
 
@@ -19,10 +19,17 @@ Aa-12
         </div>
 
         <div class="form-group">
-            <label for="name" class="">
-                名称
+            <label for="containedInPlace[branchCode][$eq]" class="">
+                劇場
             </label>
-            <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
+            <select class="form-control" name="containedInPlace[branchCode][$eq]">
+                <option value="">選択してください</option>
+                <% for (const movieTheater of movieTheaters) { %>
+                <option value="<%= movieTheater.branchCode %>">
+                    <%= movieTheater.name.ja %>
+                </option>
+                <% } %>
+            </select>
         </div>
 
         <div>
@@ -46,35 +53,38 @@ Aa-12
         <div class="card">
             <div class="card-body">
                 <div class="table-responsive">
-
                     <table class="table">
                         <thead class="text-primary">
                             <tr>
                                 <th>コード</th>
-                                <th>名称<br>英語名称<br>カナ</th>
-                                <th>属性</th>
-                                <th>座席購入上限数<br>販売開始日<br>上映後販売終了時間</th>
+                                <th>劇場</th>
+                                <th>名称</th>
+                                <th>アドレス</th>
+                                <th>自由席</th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr id="templateRow" identifier="">
-                                <td name="id__branchCode"><a target="_blank"
-                                        href="/places/movieTheater/$id$/update">$branchCode$</a>
-                                </td>
-                                <td name="name.ja__name.en__kanaName">
-                                    $name.ja$<br>
-                                    $name.en$<br>
-                                    $kanaName$<br>
-                                </td>
-                                <td name="telephone">
-                                    <p>$telephone$</p>
+                                <td name="containedInPlace.branchCode__branchCode__branchCode"><a target="_blank"
+                                        href="/places/screeningRoom/$containedInPlace.branchCode$:$branchCode$/update">$branchCode$</a>
                                 </td>
                                 <td
-                                    name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
-                                    $offers.eligibleQuantity.maxValue$枚
-                                    <br>$availabilityStartsGraceTimeInDays$日前
-                                    <br>$availabilityEndsGraceTimeInMinutes$
+                                    name="containedInPlace.typeOf__containedInPlace.branchCode__containedInPlace.name.ja">
+                                    <span class="badge badge-secondary">$containedInPlace.typeOf$</span><br>
+                                    $containedInPlace.branchCode$<br>
+                                    $containedInPlace.name.ja$<br>
+                                </td>
+                                <td name="name.ja__name.en">
+                                    $name.ja$<br>
+                                    $name.en$
+                                </td>
+                                <td name="address.ja__address.en">
+                                    $address.ja$<br>
+                                    $address.en$
+                                </td>
+                                <td name="openSeatingAllowed">
+                                    $openSeatingAllowed$<br>
                                 </td>
                                 <td name="branchCode__id" class="">
                                     <div class="text-center">
@@ -82,12 +92,6 @@ Aa-12
                                             class="btn btn-sm btn-outline-primary showAdditionalProperty"
                                             data-branchCode="$branchCode$">
                                             <span>追加特性</span>
-                                        </a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a href="javascript:void(0)"
-                                            class="btn btn-sm btn-outline-secondary showContainsPlace" data-id="$id$">
-                                            <span>スクリーン情報</span>
                                         </a>
                                     </div>
                                 </td>
@@ -107,7 +111,7 @@ Aa-12
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">劇場の追加特性</h4>
+                <h4 class="modal-title">追加特性</h4>
             </div>
             <div class="modal-body">
             </div>
