--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,13 +14,13 @@ DB-01
     <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="card projects">
-                <div class="card-header card-header-warning">
+                <div class="card-header card-header-primary">
                     <h4 class="card-title">プロジェクト</h4>
                     <!-- <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p> -->
                 </div>
                 <div class="card-body table-responsive">
                     <table class="table table-hover">
-                        <thead class="text-warning">
+                        <thead class="text-primary">
                             <th>名称</th>
                         </thead>
                         <tbody>
