--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@ HO-01
     <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
-                <div class="card-header card-header-warning card-header-icon">
+                <div class="card-header card-header-primary card-header-icon">
                     <div class="card-icon">
                         <i class="icon fa fa-database"></i>
                     </div>
@@ -138,13 +138,13 @@ HO-01
     <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="card eventsWithAggregation">
-                <div class="card-header card-header-warning">
+                <div class="card-header card-header-primary">
                     <h4 class="card-title">本日のイベント</h4>
                     <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p>
                 </div>
                 <div class="card-body table-responsive">
                     <table class="table table-hover">
-                        <thead class="text-warning">
+                        <thead class="text-primary">
                             <th>開始日時</th>
                             <th>名称</th>
                             <th class="w-25">場所</th>
@@ -164,7 +164,7 @@ HO-01
 
         <div class="col-lg-6 col-md-12">
             <div class="card">
-                <div class="card-header card-header-tabs card-header-primary">
+                <div class="card-header card-header-tabs card-header-warning">
                     <div class="nav-tabs-navigation">
                         <div class="nav-tabs-wrapper">
                             <!-- <span class="nav-tabs-title">Tasks:</span> -->
@@ -183,7 +183,7 @@ HO-01
                     <div class="tab-content">
                         <div class="tab-pane active" id="latestReservations">
                             <table class="table table-hover">
-                                <thead class="text-primary">
+                                <thead class="text-warning">
                                     <th class="w-25">予約番号</th>
                                     <th>更新日時</th>
                                     <th>イベント</th>
