--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -7,24 +7,30 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#theaters">
-                <i class="material-icons">theaters</i>
+            <a class="nav-link" data-toggle="collapse" href="#places">
+                <i class="material-icons">place</i>
                 <p> 施設
                     <b class="caret"></b>
                 </p>
             </a>
-            <div class="collapse" id="theaters">
+            <div class="collapse" id="places">
                 <ul class="nav">
                     <li class="nav-item <%= (displayId === 'Aa-12') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/movieTheater">
-                            <i class="material-icons">theaters</i>
-                            <p>劇場</p>
+                            <span class="sidebar-mini"><i class="material-icons">theaters</i></span>
+                            <span class="sidebar-normal">劇場</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'SR-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/screeningRoom">
-                            <i class="material-icons">theaters</i>
-                            <p>スクリーン</p>
+                            <span class="sidebar-mini"><i class="material-icons">meeting_room</i></span>
+                            <span class="sidebar-normal">スクリーン</span>
+                        </a>
+                    </li>
+                    <li class="nav-item <%= (displayId === 'ST-01') ? 'active': ''; %>">
+                        <a class="nav-link" href="/places/seat">
+                            <span class="sidebar-mini"><i class="material-icons">event_seat</i></span>
+                            <span class="sidebar-normal">座席</span>
                         </a>
                     </li>
                 </ul>
@@ -36,29 +42,29 @@
                 <p>映画作品</p>
             </a>
         </li>
-        <li class="nav-item <%= (displayId === 'Aa-3') ? 'active': ''; %>">
-            <a class="nav-link" href="/events/screeningEventSeries">
-                <i class="icon far fa-calendar"></i>
-                <p>劇場上映作品</p>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#events">
+                <i class="material-icons">event</i>
+                <p> イベント
+                    <b class="caret"></b>
+                </p>
             </a>
-        </li>
-        <li class="nav-item <%= (displayId === 'Aa-4') ? 'active': ''; %>">
-            <a class="nav-link" href="/events/screeningEvent">
-                <i class="icon far fa-calendar-alt"></i>
-                <p>スケジュール</p>
-            </a>
-        </li>
-        <li class="nav-item <%= (displayId === 'Aa-6') ? 'active': ''; %>">
-            <a class="nav-link" href="/ticketTypes">
-                <i class="material-icons">local_offer</i>
-                <p>券種</p>
-            </a>
-        </li>
-        <li class="nav-item <%= (displayId === 'Aa-8') ? 'active': ''; %>">
-            <a class="nav-link" href="/ticketTypeGroups">
-                <i class="material-icons">local_offer</i>
-                <p>券種グループ</p>
-            </a>
+            <div class="collapse" id="events">
+                <ul class="nav">
+                    <li class="nav-item <%= (displayId === 'Aa-3') ? 'active': ''; %>">
+                        <a class="nav-link" href="/events/screeningEventSeries">
+                            <span class="sidebar-mini"><i class="icon far fa-calendar"></i></span>
+                            <span class="sidebar-normal">劇場上映作品</span>
+                        </a>
+                    </li>
+                    <li class="nav-item <%= (displayId === 'Aa-4') ? 'active': ''; %>">
+                        <a class="nav-link" href="/events/screeningEvent">
+                            <span class="sidebar-mini"><i class="icon far fa-calendar-alt"></i></span>
+                            <span class="sidebar-normal">スケジュール</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </li>
         <!-- <li class="nav-item <%= (displayId === 'AT-01') ? 'active': ''; %>">
             <a class="nav-link" href="/accountTitles">
@@ -66,37 +72,74 @@
                 <p>細目</p>
             </a>
         </li> -->
-        <li class="nav-item <%= (displayId === 'Aa-17') ? 'active': ''; %>">
-            <a class="nav-link" href="/serviceTypes">
-                <i class="material-icons">category</i>
-                <p>興行区分</p>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#offers">
+                <i class="material-icons">local_offer</i>
+                <p> オファー
+                    <b class="caret"></b>
+                </p>
             </a>
+            <div class="collapse" id="offers">
+                <ul class="nav">
+                    <li class="nav-item <%= (displayId === 'Aa-6') ? 'active': ''; %>">
+                        <a class="nav-link" href="/ticketTypes">
+                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
+                            <span class="sidebar-normal">イベント券種</span>
+                        </a>
+                    </li>
+                    <li class="nav-item <%= (displayId === 'Aa-8') ? 'active': ''; %>">
+                        <a class="nav-link" href="/ticketTypeGroups">
+                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
+                            <span class="sidebar-normal">イベント券種グループ</span>
+                        </a>
+                    </li>
+                    <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
+                    <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
+                        <a class="nav-link" href="/addOns">
+                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
+                            <span class="sidebar-normal">アドオン <span class="badge badge-secondary">Preview</span></span>
+                        </a>
+                    </li>
+                    <% } %>
+                </ul>
+            </div>
         </li>
-        <li class="nav-item <%= (displayId === 'CC-00') ? 'active': ''; %>">
-            <a class="nav-link" href="/categoryCodes">
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#categoryCodes">
                 <i class="material-icons">category</i>
-                <p>各種区分 <span class="badge badge-secondary">Preview</span></p>
+                <p> 区分
+                    <b class="caret"></b>
+                </p>
             </a>
+            <div class="collapse" id="categoryCodes">
+                <ul class="nav">
+                    <li class="nav-item <%= (displayId === 'Aa-17') ? 'active': ''; %>">
+                        <a class="nav-link" href="/serviceTypes">
+                            <span class="sidebar-mini"><i class="material-icons">category</i></span>
+                            <span class="sidebar-normal">興行区分</span>
+                        </a>
+                    </li>
+                    <li class="nav-item <%= (displayId === 'CC-00') ? 'active': ''; %>">
+                        <a class="nav-link" href="/categoryCodes">
+                            <span class="sidebar-mini"><i class="material-icons">category</i></span>
+                            <span class="sidebar-normal">各種区分</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </li>
         <li class="nav-item <%= (displayId === 'PS-02') ? 'active': ''; %>">
             <a class="nav-link" href="/priceSpecifications">
                 <i class="material-icons">attach_money</i>
-                <p>価格仕様 <span class="badge badge-secondary">Preview</span></p>
+                <p>価格仕様<span class="badge badge-secondary ml-2">Preview</span></p>
             </a>
         </li>
 
         <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
-        <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
-            <a class="nav-link" href="/addOns">
-                <i class="material-icons">local_offer</i>
-                <p>アドオン <span class="badge badge-secondary">Preview</span></p>
-            </a>
-        </li>
-
         <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
             <a class="nav-link" href="/products">
                 <i class="material-icons">local_drink</i>
-                <p>プロダクト <span class="badge badge-secondary">Preview</span></p>
+                <p>プロダクト<span class="badge badge-secondary ml-2">Preview</span></p>
             </a>
         </li>
         <% } %>
@@ -108,4 +151,10 @@
             </a>
         </li>
     </ul>
+    <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;">
+        <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+    </div>
+    <div class="ps-scrollbar-y-rail" style="top: 0px; height: 664px; right: 0px;">
+        <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 410px;"></div>
+    </div>
 </div>
