--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -39,7 +39,7 @@
         <li class="nav-item <%= (displayId === 'Aa-10') ? 'active': ''; %>">
             <a class="nav-link" href="/creativeWorks/movie">
                 <i class="material-icons">movie</i>
-                <p>映画作品</p>
+                <p>作品</p>
             </a>
         </li>
         <li class="nav-item">
@@ -75,7 +75,7 @@
         <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#offers">
                 <i class="material-icons">local_offer</i>
-                <p> オファー
+                <p> オファー(券種)
                     <b class="caret"></b>
                 </p>
             </a>
