--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -57,6 +57,22 @@
             <% } %>
 
         </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="seatingType" class="bmd-label-static">
+                座席タイプ
+            </label>
+            <select class="form-control" name="seatingType">
+                <option value="">---</option>
+                <% for (const seatingType of seatingTypes) { %>
+                <% const selected = Array.isArray(forms.seatingType) && forms.seatingType.includes(seatingType.codeValue) %>
+                <option value="<%= seatingType.codeValue %>" <% if (selected) { %> selected<% } %>>
+                    <%= seatingType.name.ja %>
+                </option>
+                <% } %>
+            </select>
+        </div>
+
     </div>
 </div>
 <!-- end card -->
