--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -12,41 +12,45 @@ ST-01
 
 <%- contentFor('body') %>
 
-<div class="form-container search p-3 bg-light-gray mb-3">
-    <form method="post">
-        <%- include('../../common/master/_hidden') %>
-        <div class="menu-group">
-        </div>
+<div class="card">
+    <div class="card-body">
+        <form method="post">
+            <%- include('../../common/master/_hidden') %>
+            <div class="menu-group">
+            </div>
 
-        <div class="form-group">
-            <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]" class="">
-                劇場
-            </label>
-            <select class="form-control" name="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]">
-                <option value="">選択してください</option>
-                <% for (const movieTheater of movieTheaters) { %>
-                <option value="<%= movieTheater.branchCode %>">
-                    <%= movieTheater.name.ja %>
-                </option>
-                <% } %>
-            </select>
-        </div>
+            <div class="form-group">
+                <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]" class="">
+                    劇場
+                </label>
+                <select class="form-control"
+                    name="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]">
+                    <option value="">選択してください</option>
+                    <% for (const movieTheater of movieTheaters) { %>
+                    <option value="<%= movieTheater.branchCode %>">
+                        <%= movieTheater.name.ja %>
+                    </option>
+                    <% } %>
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="branchCode[$eq]" class="">
-                座席コード
-            </label>
-            <input class="form-control" name="branchCode[$eq]">
-        </div>
+            <div class="form-group">
+                <label for="branchCode[$eq]" class="">
+                    座席コード
+                </label>
+                <input class="form-control" name="branchCode[$eq]">
+            </div>
 
-        <div>
-            <!-- <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
-                <i class=" fa fa-plus"></i> 登録</a> -->
-
-            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-        </div>
-    </form>
+            <div>
+                <!-- <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
+                    <i class=" fa fa-plus"></i> 登録</a> -->
+                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
+            </div>
+        </form>
+    </div>
+    <div class="card-footer ">
+    </div>
 </div>
 
 <div class="form-container search">
@@ -99,17 +103,17 @@ ST-01
                                     $containedInPlace.branchCode$<br>
                                     $containedInPlace.name.ja$<br>
                                 </td>
-                                <td name="seatingType">
-                                    $seatingType$<br>
+                                <td name="seatingTypeStr">
+                                    $seatingTypeStr$<br>
                                 </td>
-                                <td name="branchCode__id" class="">
-                                    <!-- <div class="text-center">
+                                <td name="id" class="">
+                                    <div class="text-center">
                                         <a href="javascript:void(0)"
                                             class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                            data-branchCode="$branchCode$">
+                                            data-id="$id$">
                                             <span>追加特性</span>
                                         </a>
-                                    </div> -->
+                                    </div>
                                 </td>
                             </tr>
                         </tbody>
